# libtclpy

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  pkgIndex.tcl.in
cmake/: FindTclConfig.cmake  tcl_config_path.tcl
generic/: tclpy.c
